# globpos

./: CMakeLists.txt  README.md
globpos/: GlobalPosition.h  NmeaParser.cpp  NmeaParser.h  NmeaSentence.cpp  NmeaSentence.h  gpgga.cpp  gpgga.h  settings.h
tests/: nmeaparser.cpp  parser.cpp
